--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,5 @@
-<nav>
-    <a href="my_page.html">My TODO</a>
-    <a href="mom_page.html">Mom TODO</a>
-    <a href="dad_page.html">Dad TODO</a>
+<nav class="nav container">
+    <a class="nav-link" href="my_page.html">My TODO</a>
+    <a class="nav-link" href="mom_page.html">Mom TODO</a>
+    <a class="nav-link" href="dad_page.html">Dad TODO</a>
 </nav>
